added clinic entity and updated the service and controller layers