@@ -1,71 +1,55 @@
 package com.safwantech.hms_backend.service;
 
 import com.safwantech.hms_backend.dto.PatientDto;
+import com.safwantech.hms_backend.entity.Clinic;
 import com.safwantech.hms_backend.entity.Patient;
 import com.safwantech.hms_backend.exception.ResourceNotFoundException;
+import com.safwantech.hms_backend.repository.ClinicRepository;
 import com.safwantech.hms_backend.repository.PatientRepository;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 public class PatientService {
 
     private final PatientRepository patientRepository;
+    private final ClinicRepository clinicRepository;
     private final ModelMapper modelMapper;
-
-    /* ---------------- CREATE ---------------- */
 
     @Transactional
     public PatientDto createPatient(PatientDto patientDto) {
-
+        Clinic clinic = getClinic(patientDto.getClinicId());
         Patient patient = modelMapper.map(patientDto, Patient.class);
-
-        Patient savedPatient = patientRepository.save(patient);
-
-        return modelMapper.map(savedPatient, PatientDto.class);
+        patient.setClinic(clinic);
+        return mapToDto(patientRepository.save(patient));
     }
 
-    /* ---------------- GET ALL ---------------- */
-
     @Transactional(readOnly = true)
-    public List<PatientDto> getAllPatients() {
-
-        return patientRepository.findAll()
+    public List<PatientDto> getAllPatients(Long clinicId) {
+        return patientRepository.findByClinicId(clinicId)
                 .stream()
-                .map(patient -> modelMapper.map(patient, PatientDto.class))
-                .collect(Collectors.toList());
+                .map(this::mapToDto)
+                .toList();
     }
-
-    /* ---------------- GET BY ID ---------------- */
 
     @Transactional(readOnly = true)
-    public PatientDto getPatientById(Long id) {
-
-        Patient patient = patientRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Patient not found with id: " + id));
-
-        return modelMapper.map(patient, PatientDto.class);
+    public PatientDto getPatientById(Long clinicId, Long id) {
+        Patient patient = patientRepository.findByIdAndClinicId(id, clinicId)
+                .orElseThrow(() -> new ResourceNotFoundException("Patient not found with id: " + id + " for clinic: " + clinicId));
+        return mapToDto(patient);
     }
-
-    /* ---------------- UPDATE ---------------- */
 
     @Transactional
-    public PatientDto updatePatient(Long id, PatientDto patientDto) {
+    public PatientDto updatePatient(Long clinicId, Long id, PatientDto patientDto) {
+        Patient patient = patientRepository.findByIdAndClinicId(id, clinicId)
+                .orElseThrow(() -> new ResourceNotFoundException("Patient not found with id: " + id + " for clinic: " + clinicId));
 
-        Patient patient = patientRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Patient not found with id: " + id));
-
-
+        patient.setClinic(getClinic(clinicId));
         patient.setName(patientDto.getName());
         patient.setGender(patientDto.getGender());
         patient.setPhoneNumber(patientDto.getPhoneNumber());
@@ -75,31 +59,24 @@ public class PatientService {
         patient.setBloodGroupType(patientDto.getBloodGroupType());
         patient.setPatientType(patientDto.getPatientType());
 
-        Patient updatedPatient = patientRepository.save(patient);
-
-        return modelMapper.map(updatedPatient, PatientDto.class);
+        return mapToDto(patientRepository.save(patient));
     }
 
-    /* ---------------- DELETE ---------------- */
-
     @Transactional
-    public void deletePatient(Long id) {
-
-        Patient patient = patientRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Patient not found with id: " + id));
-
+    public void deletePatient(Long clinicId, Long id) {
+        Patient patient = patientRepository.findByIdAndClinicId(id, clinicId)
+                .orElseThrow(() -> new ResourceNotFoundException("Patient not found with id: " + id + " for clinic: " + clinicId));
         patientRepository.delete(patient);
     }
 
-
-    @Transactional(readOnly = true)
-    public Page<PatientDto> getPatients(Pageable pageable) {
-
-        return patientRepository.findAll(pageable)
-                .map(patient -> modelMapper.map(patient, PatientDto.class));
+    private Clinic getClinic(Long clinicId) {
+        return clinicRepository.findById(clinicId)
+                .orElseThrow(() -> new ResourceNotFoundException("Clinic not found with id: " + clinicId));
     }
 
-
-
+    private PatientDto mapToDto(Patient patient) {
+        PatientDto patientDto = modelMapper.map(patient, PatientDto.class);
+        patientDto.setClinicId(patient.getClinic().getId());
+        return patientDto;
+    }
 }
