@@ -1,9 +1,15 @@
 package com.safwantech.hms_backend.service;
 
 import com.safwantech.hms_backend.dto.PrescriptionDto;
-import com.safwantech.hms_backend.entity.*;
+import com.safwantech.hms_backend.entity.Appointment;
+import com.safwantech.hms_backend.entity.Clinic;
+import com.safwantech.hms_backend.entity.Doctor;
+import com.safwantech.hms_backend.entity.Patient;
+import com.safwantech.hms_backend.entity.Prescription;
+import com.safwantech.hms_backend.entity.PrescriptionItem;
 import com.safwantech.hms_backend.exception.ResourceNotFoundException;
 import com.safwantech.hms_backend.repository.AppointmentRepository;
+import com.safwantech.hms_backend.repository.ClinicRepository;
 import com.safwantech.hms_backend.repository.DoctorRepository;
 import com.safwantech.hms_backend.repository.PatientRepository;
 import com.safwantech.hms_backend.repository.PrescriptionRepository;
@@ -13,7 +19,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -23,105 +28,93 @@ public class PrescriptionService {
     private final DoctorRepository doctorRepository;
     private final PatientRepository patientRepository;
     private final AppointmentRepository appointmentRepository;
+    private final ClinicRepository clinicRepository;
     private final ModelMapper modelMapper;
 
     @Transactional
     public PrescriptionDto createPrescription(PrescriptionDto dto) {
-
-        Doctor doctor = doctorRepository.findById(dto.getDoctorId())
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Doctor not found with id : " + dto.getDoctorId()));
-
-        Patient patient = patientRepository.findById(dto.getPatientId())
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Patient not found with id : " + dto.getPatientId()));
-
-        Appointment appointment = appointmentRepository.findById(dto.getAppointmentId())
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Appointment not found with id : " + dto.getAppointmentId()));
+        Clinic clinic = getClinic(dto.getClinicId());
+        Doctor doctor = doctorRepository.findByIdAndClinicId(dto.getDoctorId(), clinic.getId())
+                .orElseThrow(() -> new ResourceNotFoundException("Doctor not found with id : " + dto.getDoctorId() + " for clinic: " + clinic.getId()));
+        Patient patient = patientRepository.findByIdAndClinicId(dto.getPatientId(), clinic.getId())
+                .orElseThrow(() -> new ResourceNotFoundException("Patient not found with id : " + dto.getPatientId() + " for clinic: " + clinic.getId()));
+        Appointment appointment = appointmentRepository.findByIdAndClinicId(dto.getAppointmentId(), clinic.getId())
+                .orElseThrow(() -> new ResourceNotFoundException("Appointment not found with id : " + dto.getAppointmentId() + " for clinic: " + clinic.getId()));
 
         Prescription prescription = new Prescription();
-
+        prescription.setClinic(clinic);
         prescription.setDiagnosis(dto.getDiagnosis());
         prescription.setMedication(dto.getMedication());
         prescription.setDosage(dto.getDosage());
         prescription.setInstruction(dto.getInstruction());
-
         prescription.setDoctor(doctor);
         prescription.setPatient(patient);
         prescription.setAppointment(appointment);
 
         if (dto.getItems() != null && !dto.getItems().isEmpty()) {
-
-            List<PrescriptionItem> items = dto.getItems()
-                    .stream()
+            List<PrescriptionItem> items = dto.getItems().stream()
                     .map(itemDto -> {
-
                         PrescriptionItem item = new PrescriptionItem();
-
+                        item.setClinic(clinic);
                         item.setMedicine(itemDto.getMedicine());
                         item.setDosage(itemDto.getDosage());
                         item.setInstruction(itemDto.getInstruction());
-
                         item.setPrescription(prescription);
-
                         return item;
-
-                    }).collect(Collectors.toList());
-
+                    })
+                    .toList();
             prescription.getPrescriptionItems().addAll(items);
         }
 
-        Prescription savedPrescription = prescriptionRepository.save(prescription);
-
-        return modelMapper.map(savedPrescription, PrescriptionDto.class);
-    }
-
-
-    @Transactional
-    public PrescriptionDto getPrescriptionById(Long id) {
-
-        Prescription prescription = prescriptionRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Prescription not found with id : " + id));
-
-        return modelMapper.map(prescription, PrescriptionDto.class);
+        return mapToDto(prescriptionRepository.save(prescription));
     }
 
     @Transactional
-    public List<PrescriptionDto> getAllPrescriptions() {
+    public PrescriptionDto getPrescriptionById(Long clinicId, Long id) {
+        Prescription prescription = prescriptionRepository.findByIdAndClinicId(id, clinicId)
+                .orElseThrow(() -> new ResourceNotFoundException("Prescription not found with id : " + id + " for clinic: " + clinicId));
+        return mapToDto(prescription);
+    }
 
-        List<Prescription> prescriptions = prescriptionRepository.findAll();
-
-        return prescriptions.stream()
-                .map(p -> modelMapper.map(p, PrescriptionDto.class))
+    @Transactional
+    public List<PrescriptionDto> getAllPrescriptions(Long clinicId) {
+        return prescriptionRepository.findByClinicId(clinicId)
+                .stream()
+                .map(this::mapToDto)
                 .toList();
     }
 
     @Transactional
-    public PrescriptionDto updatePrescription(Long id, PrescriptionDto dto) {
-
-        Prescription prescription = prescriptionRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Prescription not found with id : " + id));
+    public PrescriptionDto updatePrescription(Long clinicId, Long id, PrescriptionDto dto) {
+        Prescription prescription = prescriptionRepository.findByIdAndClinicId(id, clinicId)
+                .orElseThrow(() -> new ResourceNotFoundException("Prescription not found with id : " + id + " for clinic: " + clinicId));
 
         prescription.setDiagnosis(dto.getDiagnosis());
         prescription.setMedication(dto.getMedication());
         prescription.setDosage(dto.getDosage());
         prescription.setInstruction(dto.getInstruction());
 
-        Prescription updatedPrescription = prescriptionRepository.save(prescription);
-
-        return modelMapper.map(updatedPrescription, PrescriptionDto.class);
+        return mapToDto(prescriptionRepository.save(prescription));
     }
 
     @Transactional
-    public void deletePrescription(Long id) {
-
-        Prescription prescription = prescriptionRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Prescription not found with id : " + id));
-
+    public void deletePrescription(Long clinicId, Long id) {
+        Prescription prescription = prescriptionRepository.findByIdAndClinicId(id, clinicId)
+                .orElseThrow(() -> new ResourceNotFoundException("Prescription not found with id : " + id + " for clinic: " + clinicId));
         prescriptionRepository.delete(prescription);
+    }
+
+    private Clinic getClinic(Long clinicId) {
+        return clinicRepository.findById(clinicId)
+                .orElseThrow(() -> new ResourceNotFoundException("Clinic not found with id: " + clinicId));
+    }
+
+    private PrescriptionDto mapToDto(Prescription prescription) {
+        PrescriptionDto prescriptionDto = modelMapper.map(prescription, PrescriptionDto.class);
+        prescriptionDto.setClinicId(prescription.getClinic().getId());
+        prescriptionDto.setAppointmentId(prescription.getAppointment().getId());
+        prescriptionDto.setPatientId(prescription.getPatient().getId());
+        prescriptionDto.setDoctorId(prescription.getDoctor().getId());
+        return prescriptionDto;
     }
 }
